--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ndcotta-bc @pavel-bc @mbratfisch-bc @jjambazov-bc @jcavallaro-bc
+* @ndcotta-bc @pavel-bc @mbratfisch-bc @jjambazov-bc @jdziworski-bc
