--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ndcotta-bc @pavel-bc @mbratfisch-bc @jjambazov-bc @jdziworski-bc @jhuntbach-bc @akuter-bc
+* @blockchain/finplatform-core-custody-developers @blockchain/finplatform-core-custody-team-leads
