--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @blockchain/finplatform-core-custody-developers @blockchain/finplatform-core-custody-team-leads
+* @blockchain/finplatform-core-custody-developers @blockchain/finplatform-core-custody-team-leads @blockchain/finplatform-defi-wallet-developers @blockchain/finplatform-defi-wallet-team-leads
